<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#f4f4f4">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/white"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="35dp"
			android:orientation="horizontal">

			<CheckedTextView
				android:id="@+id/ctv_advise"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:clickable="true"
				android:focusable="true"
				android:gravity="center"
				android:text="@string/banner_advise"
				android:textColor="@color/banner"
				android:textSize="14sp"/>

			<CheckedTextView
				android:id="@+id/ctv_song_list"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:clickable="true"
				android:focusable="true"
				android:gravity="center"
				android:text="@string/banner_song_list"
				android:textColor="@color/banner"
				android:textSize="14sp"/>

			<CheckedTextView
				android:id="@+id/ctv_anchor_station"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:clickable="true"
				android:focusable="true"
				android:gravity="center"
				android:text="@string/banner_anchor_station"
				android:textColor="@color/banner"
				android:textSize="14sp"/>

			<CheckedTextView
				android:id="@+id/ctv_ranking_list"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:clickable="true"
				android:focusable="true"
				android:gravity="center"
				android:text="@string/banner_ranking_list"
				android:textColor="@color/banner"
				android:textSize="14sp"/>
		</LinearLayout>

		<View
			style="@style/slide_menu_line"
			android:layout_marginLeft="0dp"
			android:layout_marginRight="0dp"/>

		<FrameLayout
			android:id="@+id/frame_container"
			android:layout_width="match_parent"
			android:layout_height="match_parent"/>
	</LinearLayout>
</FrameLayout>